Add basic design

--- a/common-assignment.html
+++ b/common-assignment.html
@@ -1,14 +1,48 @@
 <head>
-  <title>common-assignment</title>
+  <title>Common Engineering</title>
+  <script src="https://use.typekit.net/ujm5uci.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <section class="intro">
+    <div class="container">
+      <div class="row">
+        <div class="title four columns">
+          <a href="#">COMMON</a>
+        </div>
+        <div class="navbar eight columns">
+          <ul>
+            <li>
+              <a href="#"><span>About</span></a>
+            </li>
+            <li>
+              <a href="#"><span>Services</span></a>
+            </li>
+            <li>
+              <a href="#"><span>Contact</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="one-half column u-pull-left">
+          <h1>A different kind of technical consulting firm</h1>
+          Testing lots of fucking writing and shit.
+        </div>
+        <div class="one-half column u-pull-left">
+          Testing lots of fucking writing and shit.
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="stuff1">
 
-  {{> hello}}
+  </section>
+  <section class="stuff2">
+
+  </section>
+  <section class="stuff3">
+
+  </section>
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
