Add new templates

--- a/common-assignment.html
+++ b/common-assignment.html
@@ -7,42 +7,74 @@
 <body>
   <section class="intro">
     <div class="container">
-      <div class="row">
-        <div class="title four columns">
-          <a href="#">COMMON</a>
-        </div>
-        <div class="navbar eight columns">
-          <ul>
-            <li>
-              <a href="#"><span>About</span></a>
-            </li>
-            <li>
-              <a href="#"><span>Services</span></a>
-            </li>
-            <li>
-              <a href="#"><span>Contact</span></a>
-            </li>
-          </ul>
-        </div>
+      <div class="title five columns">
+        <a href="#">COMMON</a>
       </div>
-      <div class="row">
-        <div class="one-half column u-pull-left">
-          <h1>A different kind of technical consulting firm</h1>
-          Testing lots of fucking writing and shit.
-        </div>
-        <div class="one-half column u-pull-left">
-          Testing lots of fucking writing and shit.
-        </div>
+      <div class="navbar seven columns">
+        <ul>
+          <li>
+            <a href="#"><span>About</span></a>
+          </li>
+          <li>
+            <a href="#"><span>Services</span></a>
+          </li>
+          <li>
+            <a href="#"><span>Contact</span></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="container">
+      <h1>We design, develop and deliver software.</h1>
+    </div>
+  </section>
+  <section class="about">
+    <div class="container">
+      <h2 class="u-pull-right">A different kind of technical consulting firm</h2>
+
+      <div class="two-thirds column u-pull-right">
+        <p class="u-pull-right">
+          Common Engineering is different.
+        </p>
+        <p>
+          We build software from the ground up. We use open source software to get the job done.
+        </p>
+        <p>
+          Our team consists of remote contributors who do stuff.
+        </p>
+      </div>
+      <div class="one-third column">
       </div>
     </div>
   </section>
-  <section class="stuff1">
+  <section class="services">
+    <div class="container">
+      <h2>Services we offer</h2>
+      <div class="two-thirds column">
+        <p class="u-pull-right">
+          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="plans">
 
   </section>
-  <section class="stuff2">
+  <section class="contact">
+    <div class="container">
+    <h2 class="u-pull-right">Get in touch</h2>
+
+    <div class="two-thirds column u-pull-right">
+      <p class="u-pull-right">
+      </p>
+    </div>
+    <div class="one-third column">
+    </div>
+  </div>
 
   </section>
-  <section class="stuff3">
+  <section class="footer">
 
   </section>
 </body>
