Update navbar for small screens, add hover effect

--- a/common-assignment.html
+++ b/common-assignment.html
@@ -7,19 +7,22 @@
 <body>
   <section class="intro">
     <div class="container">
-      <div class="title five columns">
+      <div class="title six columns">
         <a href="#">COMMON</a>
       </div>
-      <div class="navbar seven columns">
+      <div class="navbar six columns">
         <ul>
           <li>
-            <a href="#"><span>About</span></a>
+            <a href="#">About</a>
+            <span></span>
           </li>
           <li>
-            <a href="#"><span>Services</span></a>
+            <a href="#">Services</a>
+            <span></span>
           </li>
           <li>
-            <a href="#"><span>Contact</span></a>
+            <a href="#">Contact</a>
+            <span></span>
           </li>
         </ul>
       </div>
