--- a/common-assignment.html
+++ b/common-assignment.html
@@ -66,18 +66,34 @@
   </section>
   <section class="contact">
     <div class="container">
-    <h2 class="u-pull-right">Get in touch</h2>
+      <h2 class="u-pull-right">Get in touch</h2>
 
-    <div class="two-thirds column u-pull-right">
-      <p class="u-pull-right">
-      </p>
+      <div class="two-thirds column u-pull-right">
+        <p class="u-pull-right">
+        </p>
+      </div>
+      <div class="one-third column">
+      </div>
     </div>
-    <div class="one-third column">
-    </div>
-  </div>
 
   </section>
-  <section class="footer">
-
-  </section>
+  <footer>
+    <div class="container">
+      <div class="four columns">
+        Column 1<br />
+        Column 1<br />
+        Column 1<br />
+      </div>
+      <div class="four columns">
+        Column 2<br />
+        Column 2<br />
+        Column 2<br />
+      </div>
+      <div class="four columns">
+        Column 3<br />
+        Column 3<br />
+        Column 3<br />
+      </div>
+    </div>
+  </footer>
 </body>
