--- a/common-assignment.html
+++ b/common-assignment.html
@@ -8,7 +8,7 @@
   <section class="intro">
     <div class="container">
       <div class="title six columns">
-        <a href="#">COMMON</a>
+        <a href="/">COMMON</a>
       </div>
       <div class="navbar six columns">
         <ul>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="container">
-      <h1>We design, develop and deliver software.</h1>
+      <h1>We design, develop and deliver software for the web.</h1>
     </div>
   </section>
   <section class="about">
@@ -62,7 +62,18 @@
     </div>
   </section>
   <section class="plans">
-
+    <div class="container">
+      <h2 class="center">Pricing</h2>
+      <div class="four columns">
+        Testing
+      </div>
+      <div class="four columns">
+        Testing
+      </div>
+      <div class="four columns">
+        Testing
+      </div>
+    </div>
   </section>
   <section class="contact">
     <div class="container">
