--- a/common-assignment.html
+++ b/common-assignment.html
@@ -21,6 +21,10 @@
             <span></span>
           </li>
           <li>
+            <a href="#">Pricing</a>
+            <span></span>
+          </li>
+          <li>
             <a href="#">Contact</a>
             <span></span>
           </li>
@@ -34,7 +38,7 @@
   </section>
   <section class="about">
     <div class="container">
-      <h2 class="u-pull-right">A different kind of technical consulting firm</h2>
+      <h2 class="u-pull-right right">A different kind of technical consulting firm</h2>
 
       <div class="two-thirds column u-pull-right">
         <p class="u-pull-right">
@@ -77,7 +81,7 @@
   </section>
   <section class="contact">
     <div class="container">
-      <h2 class="u-pull-right">Get in touch</h2>
+      <h2 class="u-pull-right right">Get in touch</h2>
 
       <div class="two-thirds column u-pull-right">
         <p class="u-pull-right">
