--- a/common-assignment.html
+++ b/common-assignment.html
@@ -31,17 +31,19 @@
         </ul>
       </div>
     </div>
-
     <div class="container">
       <h1>We design, develop and deliver software for the web.</h1>
     </div>
   </section>
   <section class="about">
     <div class="container">
-      <h2 class="u-pull-right right">A different kind of technical consulting firm</h2>
-
+      <div class="row">
+        <h2 class="u-pull-right right">A different kind of technical consulting firm</h2>
+      </div>
+      <div class="one-third column">
+      </div>
       <div class="two-thirds column u-pull-right">
-        <p class="u-pull-right">
+        <p>
           Common Engineering is different.
         </p>
         <p>
@@ -51,46 +53,50 @@
           Our team consists of remote contributors who do stuff.
         </p>
       </div>
-      <div class="one-third column">
-      </div>
     </div>
   </section>
   <section class="services">
     <div class="container">
-      <h2>Services we offer</h2>
-      <div class="two-thirds column">
-        <p class="u-pull-right">
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-        </p>
+      <div class="row">
+        <h2>Services we offer</h2>
+      </div>
+      <div class="row">
+        <div class="one-third column">
+        </div>
+        <div class="two-thirds column">
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+          </p>
+        </div>
       </div>
     </div>
   </section>
   <section class="plans">
     <div class="container">
-      <h2 class="center">Pricing</h2>
-      <div class="four columns">
-        Testing
+      <div class="row">
+        <h2 class="center">Pricing</h2>
       </div>
-      <div class="four columns">
-        Testing
-      </div>
-      <div class="four columns">
-        Testing
+      <div class="row">
+        <div class="four columns">
+          Testing
+        </div>
+        <div class="four columns">
+          Testing
+        </div>
+        <div class="four columns">
+          Testing
+        </div>
       </div>
     </div>
   </section>
   <section class="contact">
     <div class="container">
-      <h2 class="u-pull-right right">Get in touch</h2>
-
-      <div class="two-thirds column u-pull-right">
-        <p class="u-pull-right">
-        </p>
+      <div class="row">
+        <h2 class="center">Get in touch</h2>
       </div>
-      <div class="one-third column">
+      <div class="row">
       </div>
     </div>
-
   </section>
   <footer>
     <div class="container">
