Add pricing boxes

--- a/common-assignment.html
+++ b/common-assignment.html
@@ -77,14 +77,14 @@
         <h2 class="center">Pricing</h2>
       </div>
       <div class="row">
-        <div class="four columns">
-          Testing
+        <div class="four columns box essentials">
+          <h3>Essential</h3>
         </div>
-        <div class="four columns">
-          Testing
+        <div class="four columns box pro">
+          <h3>Pro</h3>
         </div>
-        <div class="four columns">
-          Testing
+        <div class="four columns box server">
+          <h3>Hosting</h3>
         </div>
       </div>
     </div>
