Reduce footer size, add social media icons

--- a/common-assignment.html
+++ b/common-assignment.html
@@ -1,5 +1,9 @@
 <head>
   <title>Common Engineering</title>
+
+  <!-- Temporary, Font Awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+
   <script src="https://use.typekit.net/ujm5uci.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
@@ -172,23 +176,25 @@
       </div>
     </div>
   </section>
-  <section class="footer">
-    <div class="container">
-      <div class="four columns">
-        Column 1<br />
-        Column 1<br />
-        Column 1<br />
+  <footer>
+    <div class="footer-row">
+      <div class="one">
+        <ul>
+          <li>
+            &copy;Copyright 2016 Common Engineering. All rights reserved.
+          </li>
+          <li>
+            <a>Privacy Policy</a>
+          </li>
+        </ul>
       </div>
-      <div class="four columns">
-        Column 2<br />
-        Column 2<br />
-        Column 2<br />
+      <div class="two">
+        Connect with us!
       </div>
-      <div class="four columns">
-        Column 3<br />
-        Column 3<br />
-        Column 3<br />
+      <div class="three">
+        <i class="fa fa-twitter" href="#"></i>
+        <i class="fa fa-github-alt" href="#"></i>
       </div>
     </div>
-  </section>
+  </footer>
 </body>
