Adjust height of services containers

--- a/common-assignment.html
+++ b/common-assignment.html
@@ -10,7 +10,7 @@
 
 <body>
   <section class="intro">
-    <div class="container">
+    <div class="container nav">
       <div class="title six columns">
         <a href="/">COMMON</a>
       </div>
@@ -166,7 +166,7 @@
             </div>
           </div>
           <label for="exampleMessage">Message</label>
-          <textarea class="u-full-width" placeholder="" id="exampleMessage"></textarea>
+          <textarea class="u-full-width" rows="10" placeholder="" id="exampleMessage"></textarea>
           <label class="send-yourself-copy">
             <input type="checkbox">
             <span class="label-body">Send a copy to yourself</span>
