--- a/common-assignment.html
+++ b/common-assignment.html
@@ -2,7 +2,7 @@
   <title>Common Engineering</title>
 
   <!-- Temporary, Font Awesome -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" /> -->
 
   <script src="https://use.typekit.net/ujm5uci.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
